# cascade-containment

./: .env  .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  structure.txt
baseline/: evaluator.py  policy.py  run.py
config/: tasks.yaml
core/: policy_update.py  reward.py  trajectory.py
logs/: dumb greedy test.md  dumb greedy test.txt  llm+grpo test.md  llm+grpo test.txt
scripts/: test_local.py
server/: app.py  constants.py  environment.py  grader.py  utils.py
server/tasks/: base.py  registry.py  task_easy.py  task_hard.py  task_medium.py
